--- a/packages/twenty-docker/dev/docker-compose.yml
+++ b/packages/twenty-docker/dev/docker-compose.yml
@@ -18,25 +18,14 @@ services:
       - twenty_dev_node_modules_server:/app/packages/twenty-server/node_modules
     depends_on:
       - postgres
-  twenty-docs:
-    build:
-      context: ../../..
-      dockerfile: ./packages/twenty-docker/dev/twenty-docs/Dockerfile
-    ports:
-      - "5001:5001"
-    volumes:
-      - ../../../packages/twenty-docs:/app/packages/twenty-docs
-      - twenty_docs_node_modules_root:/app/node_modules
-      - twenty_docs_node_modules_yarn:/app/.yarn
-      - twenty_docs_node_modules_docs:/app/packages/twenty-docs/node_modules
   postgres:
     container_name: twenty_postgres
-    build: ./postgres
+    image: twentycrm/twenty-postgres:latest
     volumes:
     - twenty_db_data:/var/lib/postgresql/data
     environment:
-      - POSTGRES_USER=twenty
-      - POSTGRES_PASSWORD=twenty
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=default
     ports:
       - "5432:5432"
@@ -47,6 +36,4 @@ volumes:
   twenty_dev_node_modules_yarn:
   twenty_dev_node_modules_front:
   twenty_dev_node_modules_server:
-  twenty_docs_node_modules_root:
-  twenty_docs_node_modules_yarn:
-  twenty_docs_node_modules_docs:
+  twenty_dev_node_modules_docs:
