--- a/packages/twenty-postgres/Makefile
+++ b/packages/twenty-postgres/Makefile
@@ -1,14 +1,12 @@
+provision-on-docker:
+	@docker compose -f docker/docker-compose.yml up
+
 provision-on-macos-arm:
-	sh ./provision/provision-postgres-macos-arm.sh
+	sh ./macos/arm/provision-postgres-macos-arm.sh
 
 provision-on-macos-intel:
-	sh ./provision/provision-postgres-macos-intel.sh
+	sh ./macos/intel/provision-postgres-macos-intel.sh
 
 provision-on-linux:
-	sh ./provision/provision-postgres-linux.sh
+	sh ./linux/provision-postgres-linux.sh
 
-build-pg_graphql-macos-arm:
-	sh ./build/pg_graphql/build-pg_graphql-macos-arm.sh
-
-build-pg_graphql-macos-intel:
-	sh ./build/pg_graphql/build-pg_graphql-macos-intel.sh
