--- a/packages/twenty-front/package.json
+++ b/packages/twenty-front/package.json
@@ -7,7 +7,7 @@
     "start": "vite --host",
     "start:clean": "yarn start --force",
     "build": "tsc && vite build && yarn build:inject-runtime-env",
-    "build:inject-runtime-env": "./scripts/inject-runtime-env.sh",
+    "build:inject-runtime-env": "sh ./scripts/inject-runtime-env.sh",
     "preview": "vite preview",
     "eslint-plugin:setup": "cd ../packages/eslint-plugin-twenty/ && yarn && yarn build && cd ../../front/ && yarn upgrade eslint-plugin-twenty",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
