--- a/packages/twenty-front/package.json
+++ b/packages/twenty-front/package.json
@@ -145,8 +145,8 @@
     "http-server": "^14.1.1",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
-    "msw": "1.3.2",
-    "msw-storybook-addon": "^1.10.0",
+    "msw": "^2.0.11",
+    "msw-storybook-addon": "2.0.0--canary.122.b3ed3b1.0",
     "prettier": "^3.1.0",
     "storybook": "^7.6.3",
     "storybook-addon-cookie": "^3.1.0",
