--- a/packages/twenty-docker/Makefile
+++ b/packages/twenty-docker/Makefile
@@ -29,25 +29,25 @@ prod-docs-build:
 	@cd ../.. && docker build -f ./packages/twenty-docker/prod/twenty-docs/Dockerfile --tag twenty-docs . && cd -
 
 prod-docs-run:
-	@docker run -p 3000:3000 twenty-docs
+	@docker run -d -p 3000:3000 --name twenty-docs twenty-docs
 
 prod-front-build:
 	@cd ../.. && docker build -f ./packages/twenty-docker/prod/twenty-front/Dockerfile --tag twenty-front . && cd -
 
 prod-front-run:
-	@docker run -p 3000:3000 twenty-front
+	@docker run -d -p 3000:3000 --name twenty-front twenty-front
 
 prod-server-build:
 	@cd ../.. && docker build -f ./packages/twenty-docker/prod/twenty-server/Dockerfile --tag twenty-server . && cd -
 
 prod-server-run:
-	@docker run -p 3000:3000 twenty-server
+	@docker run -d -p 3000:3000 --name twenty-server twenty-server
 
 prod-postgres-build:
 	@cd ../.. && docker build -f ./packages/twenty-docker/prod/twenty-postgres/Dockerfile --tag twenty-postgres . && cd -
 
 prod-postgres-run:
-	@docker run -p 5432:5432 -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=postgres twenty-postgres
+	@docker run -d -p 5432:5432 -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=postgres --name twenty-postgres twenty-postgres
 
 release-front:
 	@cd ../.. && docker buildx build \
