--- a/packages/twenty-server/package.json
+++ b/packages/twenty-server/package.json
@@ -88,6 +88,7 @@
     "lodash.upperfirst": "^4.3.1",
     "microdiff": "^1.3.2",
     "nest-commander": "^3.12.0",
+    "openapi-types": "^12.1.3",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
