--- a/packages/eslint-plugin-twenty/package.json
+++ b/packages/eslint-plugin-twenty/package.json
@@ -32,6 +32,7 @@
     "jest": "^28.1.3",
     "postcss": "^8.4.29",
     "prettier": "^3.0.3",
+    "rimraf": "^5.0.5",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
