Fix Tsup setup to fuel docs with twenty-ui components (#2978)

--- a/packages/twenty-front/package.json
+++ b/packages/twenty-front/package.json
@@ -14,6 +14,7 @@
     "fmt:fix": "prettier --cache --write \"src/**/*.ts\" \"src/**/*.tsx\"",
     "fmt": "prettier --check \"src/**/*.ts\" \"src/**/*.tsx\"",
     "test": "jest",
+    "tsup": "tsup",
     "coverage": "jest --coverage",
     "storybook:modules:dev": "STORYBOOK_SCOPE=modules yarn storybook:dev",
     "storybook:dev": "storybook dev -p 6006 --no-open",
@@ -52,6 +53,7 @@
     "apollo-upload-client": "^17.0.0",
     "date-fns": "^2.30.0",
     "deep-equal": "^2.2.2",
+    "esbuild-plugin-svgr": "^2.1.0",
     "framer-motion": "^10.12.17",
     "graphql": "^16.6.0",
     "hex-rgb": "^5.0.0",
@@ -83,6 +85,7 @@
     "recoil": "^0.7.7",
     "scroll-into-view": "^1.16.2",
     "ts-key-enum": "^2.0.12",
+    "tsup": "^8.0.1",
     "type-fest": "^4.1.0",
     "uuid": "^9.0.0",
     "vite-tsconfig-paths": "^4.2.1",
