--- a/packages/twenty-server/.env.example
+++ b/packages/twenty-server/.env.example
@@ -19,6 +19,8 @@ SIGN_IN_PREFILLED=true
 # FRONT_AUTH_CALLBACK_URL=http://localhost:3001/verify 
 # AUTH_GOOGLE_ENABLED=false
 # MESSAGING_PROVIDER_GMAIL_ENABLED=false
+# IS_BILLING_ENABLED=false
+# BILLING_PLAN_REQUIRED_LINK=https://twenty.com/stripe-redirection
 # AUTH_GOOGLE_CLIENT_ID=replace_me_with_google_client_id
 # AUTH_GOOGLE_CLIENT_SECRET=replace_me_with_google_client_secret
 # AUTH_GOOGLE_CALLBACK_URL=http://localhost:3000/auth/google/redirect
