--- a/packages/eslint-plugin-twenty/package.json
+++ b/packages/eslint-plugin-twenty/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "test": "jest",
     "build": "rimraf ./dist && tsc  --outDir ./dist",
+    "build-pack": "yarn build && yarn pack -o eslint-plugin-twenty.tgz",
     "lint": "eslint src --max-warnings=0"
   },
   "keywords": [],
