--- a/packages/twenty-front/package.json
+++ b/packages/twenty-front/package.json
@@ -11,6 +11,7 @@
     "tsc": "tsc --watch",
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint:ci": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --config .eslintrc-ci.cjs",
     "fmt:fix": "prettier --cache --write \"src/**/*.ts\" \"src/**/*.tsx\"",
     "fmt": "prettier --check \"src/**/*.ts\" \"src/**/*.tsx\"",
     "test": "jest",
@@ -144,7 +145,7 @@
     "eslint-plugin-react-refresh": "^0.4.4",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-storybook": "^0.6.15",
-    "eslint-plugin-twenty": "file:../eslint-plugin-twenty",
+    "eslint-plugin-twenty": "file:../eslint-plugin-twenty/eslint-plugin-twenty.tgz",
     "eslint-plugin-unused-imports": "^3.0.0",
     "http-server": "^14.1.1",
     "jest": "29.7.0",
