--- a/.github/workflows/ci-chromatic.yaml
+++ b/.github/workflows/ci-chromatic.yaml
@@ -26,16 +26,16 @@ jobs:
           node-version: "18"
       - name: Front / Write .env
         run: |
-          cd front
+          cd packages/twenty-front
           touch .env
           echo "REACT_APP_SERVER_BASE_URL: $REACT_APP_SERVER_BASE_URL" >> .env
       - name: Front / Install Dependencies
-        run: cd front && yarn
-      - name: Publish to Chromatic
-        uses: chromaui/action@v1
-        with:
-          workingDir: ./front
-          projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
-          onlyChanged: true
-          buildScriptName: storybook:build
+        run: yarn
+      # - name: Publish to Chromatic
+      #   uses: chromaui/action@v1
+      #   with:
+      #     workingDir: ./packages/twenty-front
+      #     projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
+      #     onlyChanged: true
+      #     buildScriptName: storybook:build
         
