--- a/packages/twenty-docs/package.json
+++ b/packages/twenty-docs/package.json
@@ -19,7 +19,9 @@
     "@docusaurus/core": "^3.0.0",
     "@docusaurus/preset-classic": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
+    "@stoplight/elements": "^7.15.4",
     "clsx": "^1.2.1",
+    "docusaurus-node-polyfills": "^1.0.0",
     "graphiql": "^2.4.7",
     "graphql": "^16.6.0",
     "iframe-resizer-react": "^1.1.0",
