Basic data enrichment (#3023)
* Add Enrich to frontend

* Naive backend implementation

* Add work email check

* Rename Enrich to Quick Action

* Refactor logic to a separate service

* Refacto to separate IntelligenceService

* Small fixes

* Missing Break statement

* Address PR comments

* Create company interface

* Improve edge case handling

* Use httpService instead of Axios

* Fix server tests

--- a/packages/twenty-server/package.json
+++ b/packages/twenty-server/package.json
@@ -39,6 +39,7 @@
     "@graphql-tools/schema": "^10.0.0",
     "@graphql-yoga/nestjs": "patch:@graphql-yoga/nestjs@2.1.0#./patches/@graphql-yoga+nestjs+2.1.0.patch",
     "@nestjs/apollo": "^11.0.5",
+    "@nestjs/axios": "^3.0.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.2",
     "@nestjs/core": "^9.0.0",
@@ -59,7 +60,7 @@
     "@types/lodash.merge": "^4.6.7",
     "add": "^2.0.6",
     "apollo-server-express": "^3.12.0",
-    "axios": "^1.4.0",
+    "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "bullmq": "^4.14.0",
