3011 fill the messagerecipient table when fetching messages (#3073)
* wip

* trying to parse display names and emails

* add nodemailer mailparser

* mail parsing is working

* add personId and workspaceMemberId

* add date to messages

* Fix PR

* Run tsc on bigger machine

* Fix lint

---------

Co-authored-by: Charles Bochet <charles@twenty.com>

--- a/.github/workflows/ci-front.yaml
+++ b/.github/workflows/ci-front.yaml
@@ -142,6 +142,8 @@ jobs:
           restore-keys: root-node_modules-
       - name: Front / Run linter
         run: yarn nx lint:ci twenty-front
+      - name: Front / Run Typescript Check
+        run: yarn nx tsc:ci twenty-front
   front-jest:
     needs: front-yarn-install
     runs-on: ubuntu-latest
