--- a/packages/twenty-server/package.json
+++ b/packages/twenty-server/package.json
@@ -58,6 +58,7 @@
     "@sentry/tracing": "^7.66.0",
     "@types/lodash.camelcase": "^4.3.7",
     "@types/lodash.merge": "^4.6.7",
+    "@types/mailparser": "^3.4.4",
     "add": "^2.0.6",
     "apollo-server-express": "^3.12.0",
     "axios": "^1.6.2",
@@ -88,6 +89,7 @@
     "lodash.merge": "^4.6.2",
     "lodash.snakecase": "^4.1.1",
     "lodash.upperfirst": "^4.3.1",
+    "mailparser": "^3.6.5",
     "microdiff": "^1.3.2",
     "nest-commander": "^3.12.0",
     "openapi-types": "^12.1.3",
