Added rimraf to yarn build (#3089)

--- a/packages/twenty-server/package.json
+++ b/packages/twenty-server/package.json
@@ -7,7 +7,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "nest build",
+    "build": "yarn prebuild && nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "set NODE_ENV=development && nest start",
     "start:dev": "nest start --watch",
