--- a/.github/workflows/ci-front.yaml
+++ b/.github/workflows/ci-front.yaml
@@ -68,11 +68,11 @@ jobs:
         run: cd packages/twenty-front && npx playwright install
       - name: Build Storybook
         run: yarn nx storybook:pages:build --quiet twenty-front
-      # - name: Run storybook tests
-      #   run: |
-      #     cd packages/twenty-front && npx concurrently -k -s first -n "SB,TEST" -c "magenta,blue" \
-      #       "npx http-server storybook-static --silent --port 6006" \
-      #       "yarn storybook:pages:coverage"
+      - name: Run storybook tests
+        run: |
+          cd packages/twenty-front && npx concurrently -k -s first -n "SB,TEST" -c "magenta,blue" \
+            "npx http-server storybook-static --silent --port 6006" \
+            "yarn storybook:pages:coverage"
   front-modules-sb-test:
     needs: front-yarn-install
     runs-on: ci-4-cores
