2114 timebox make sure the zapier integrations supports custom objects (#3091)
* Fix build command

* Add hidden trigger to fetch object names

* Remove useless actions

* Rename createObject to createRecord

--- a/packages/twenty-zapier/tsconfig.json
+++ b/packages/twenty-zapier/tsconfig.json
@@ -6,6 +6,8 @@
     "lib": ["esnext"],
     "outDir": "./lib",
     "rootDir": "./src",
-    "strict": true
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true
   }
 }
