Marketing website POC (#3139)
First website POC

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
       "packages/twenty-docs",
       "packages/twenty-server",
       "packages/twenty-utils",
-      "packages/twenty-zapier"
+      "packages/twenty-zapier",
+      "packages/twenty-website"
     ]
   },
   "devDependencies": {
