--- a/packages/twenty-website/package.json
+++ b/packages/twenty-website/package.json
@@ -11,20 +11,31 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@jsdevtools/rehype-toc": "^3.0.2",
+    "@stoplight/elements": "^7.16.2",
     "@tabler/icons-react": "^2.44.0",
+    "better-sqlite3": "^9.2.2",
+    "graphiql": "^3.0.10",
     "next": "14.0.4",
     "next-mdx-remote": "^4.4.1",
     "react": "^18",
     "react-dom": "^18",
+    "rehype-slug": "^6.0.0",
     "remark-behead": "^3.1.0",
     "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.8",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.2",
+    "eslint-plugin-react": "^7.33.2",
+    "prettier": "^3.1.1",
     "typescript": "^5"
   }
 }
