--- a/packages/twenty-docker/dev/docker-compose.yml
+++ b/packages/twenty-docker/dev/docker-compose.yml
@@ -9,13 +9,14 @@ services:
       - "3001:3001"
       - "6006:6006"
     volumes:
-      - ../../../packages/twenty-front:/app/packages/twenty-front
-      - ../../../packages/twenty-server:/app/packages/twenty-server
-      - ../../../packages/eslint-plugin-twenty:/app/packages/eslint-plugin-twenty
+      - ../../..:/app
       - twenty_dev_node_modules_root:/app/node_modules
-      - twenty_dev_node_modules_yarn:/app/.yarn
+      - twenty_dev_node_modules_docs:/app/packages/twenty-docs/node_modules
+      - twenty_dev_node_modules_eslint:/app/packages/eslint-plugin-twenty/node_modules
       - twenty_dev_node_modules_front:/app/packages/twenty-front/node_modules
       - twenty_dev_node_modules_server:/app/packages/twenty-server/node_modules
+      - twenty_dev_node_modules_website:/app/packages/twenty-website/node_modules
+      - twenty_dev_node_modules_zapier:/app/packages/twenty-zapier/node_modules
     depends_on:
       - postgres
   postgres:
@@ -33,7 +34,10 @@ volumes:
   twenty_db_data:
     name: twenty_db_data
   twenty_dev_node_modules_root:
-  twenty_dev_node_modules_yarn:
+  twenty_dev_node_modules_docs:
+  twenty_dev_node_modules_eslint:
   twenty_dev_node_modules_front:
   twenty_dev_node_modules_server:
-  twenty_dev_node_modules_docs:
+  twenty_dev_node_modules_website:
+  twenty_dev_node_modules_zapier:
+
