--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,10 @@
 services:
 - type: web
   name: front
-  runtime: docker
-  dockerfilePath: ./packages/twenty-docker/prod/twenty-front/Dockerfile
+  runtime: image
+  plan: free
+  image:
+    url: twentycrm/twenty-front:latest
   autoDeploy: false
   envVars:
     - key: REACT_APP_SERVER_BASE_URL
@@ -12,10 +14,12 @@ services:
         envVarKey: RENDER_EXTERNAL_URL
 - type: web
   name: server
-  runtime: docker
-  dockerfilePath: ./packages/twenty-docker/prod/twenty-server/Dockerfile
+  runtime: image
+  image:
+    url: twentycrm/twenty-server:latest
   dockerCommand: "sh -c ./scripts/render-run.sh"
   autoDeploy: false
+  plan: standard
   envVars:
     - key: FRONT_BASE_URL
       fromService:
@@ -44,6 +48,7 @@ services:
     sizeGB: 5
 - type: pserv
   name: twenty_postgres
+  plan: starter
   runtime: image
   image:
     url: twentycrm/twenty-postgres:latest
