--- a/packages/twenty-docker/Makefile
+++ b/packages/twenty-docker/Makefile
@@ -48,6 +48,12 @@ prod-postgres-build:
 prod-postgres-run:
 	@docker run -d -p 5432:5432 -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=postgres --name twenty-postgres twenty-postgres
 
+prod-website-build:
+	@cd ../.. && docker build -f ./packages/twenty-docker/prod/twenty-website/Dockerfile --build-arg GITHUB_TOKEN=REPLACE_ME --tag twenty-website . && cd -
+
+prod-website-run:
+	@docker run -d -p 3000:3000 --name twenty-website twenty-website
+
 release-front:
 	@cd ../.. && docker buildx build \
 		--push \
