--- a/packages/twenty-website/package.json
+++ b/packages/twenty-website/package.json
@@ -3,6 +3,7 @@
   "version": "0.2.2",
   "private": true,
   "scripts": {
+    "nx": "NX_DEFAULT_PROJECT=twenty-website node ../../node_modules/nx/bin/nx.js",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -14,14 +15,18 @@
     "@jsdevtools/rehype-toc": "^3.0.2",
     "@nivo/calendar": "^0.84.0",
     "@nivo/core": "^0.84.0",
+    "@nx/eslint-plugin": "^17.2.8",
+    "@octokit/graphql": "^7.0.2",
     "@stoplight/elements": "^7.16.2",
     "@tabler/icons-react": "^2.44.0",
     "better-sqlite3": "^9.2.2",
     "graphiql": "^3.0.10",
+    "graphql": "^16.8.1",
     "next": "14.0.4",
     "next-mdx-remote": "^4.4.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.12.0",
     "rehype-slug": "^6.0.0",
     "remark-behead": "^3.1.0",
     "remark-gfm": "^3.0.1"
