Add mail driver (#3205)
* Add node mailer packages

* Init mailer module

* Add logger transport

* Use env variable to get transport

* Revert "Add node mailer packages"

This reverts commit 3fb954f0caef94266f96ff5f08de750073ab3491.

* Add nodemailer

* Use driver pattern

* Use logger

* Fix yarn install

* Code review returns

* Add configuration examples for smtp

* Fix merge conflict

* Add missing packages

* Fix ci

--- a/packages/twenty-server/.env.example
+++ b/packages/twenty-server/.env.example
@@ -39,3 +39,8 @@ SIGN_IN_PREFILLED=true
 # REDIS_PORT=6379
 # DEMO_WORKSPACE_IDS=REPLACE_ME_WITH_A_RANDOM_UUID
 # SERVER_URL=http://localhost:3000
+# EMAIL_DRIVER=logger
+# EMAIL_SMTP_HOST=
+# EMAIL_SMTP_PORT=
+# EMAIL_SMTP_USER=
+# EMAIL_SMTP_PASSWORD=
