--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/lodash.camelcase": "^4.3.7",
     "@types/lodash.merge": "^4.6.7",
     "@types/mailparser": "^3.4.4",
+    "@types/nodemailer": "^6.4.14",
     "add": "^2.0.6",
     "afterframe": "^1.0.2",
     "apollo-server-express": "^3.12.0",
@@ -103,6 +104,7 @@
     "nest-commander": "^3.12.0",
     "next": "14.0.4",
     "next-mdx-remote": "^4.4.1",
+    "nodemailer": "^6.9.8",
     "openapi-types": "^12.1.3",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
