--- a/packages/twenty-utils/package.json
+++ b/packages/twenty-utils/package.json
@@ -2,6 +2,8 @@
   "name": "twenty-utils",
   "private": true,
   "scripts": {
+    "nx": "NX_DEFAULT_PROJECT=twenty-front node ../../node_modules/nx/bin/nx.js",
+    "danger:ci": "danger ci --use-github-checks --failOnErrors",
     "release": "node release.js"
   }
 }
