Add doc link in env file (#3277)

--- a/packages/twenty-server/.env.example
+++ b/packages/twenty-server/.env.example
@@ -39,6 +39,7 @@ SIGN_IN_PREFILLED=true
 # REDIS_PORT=6379
 # DEMO_WORKSPACE_IDS=REPLACE_ME_WITH_A_RANDOM_UUID
 # SERVER_URL=http://localhost:3000
+# Email Server Settings, see this doc for more info: https://docs.twenty.com/start/self-hosting/environment-variables
 # EMAIL_DRIVER=logger
 # EMAIL_SMTP_HOST=
 # EMAIL_SMTP_PORT=
