feat(signup): allow to block signup (#3209)
* feat(signup): allow to block signup

* feat(signup): update environment variable documentation

* test: update auth service tests

* feat(signup): prevent user from reaching out the sign up page

* Fix lint

* Fixes

---------

Co-authored-by: Charles Bochet <charles@twenty.com>

--- a/packages/twenty-server/.env.example
+++ b/packages/twenty-server/.env.example
@@ -21,6 +21,7 @@ SIGN_IN_PREFILLED=true
 # MESSAGING_PROVIDER_GMAIL_ENABLED=false
 # IS_BILLING_ENABLED=false
 # BILLING_PLAN_REQUIRED_LINK=https://twenty.com/stripe-redirection
+# IS_SIGN_UP_DISABLED=false
 # AUTH_GOOGLE_CLIENT_ID=replace_me_with_google_client_id
 # AUTH_GOOGLE_CLIENT_SECRET=replace_me_with_google_client_secret
 # AUTH_GOOGLE_CALLBACK_URL=http://localhost:3000/auth/google/redirect
