Recursively turn relation connection into records (#3334)
* Use new ObjectRecordConnection

* Use new records without connection in GraphQLView

* Added playwright for storybook tests

* Fixed lint

* Fixed test and tsc

* Fixed storybook tests

* wip tests

* Added useMapConnectionToRecords unit test

---------

Co-authored-by: Charles Bochet <charles@twenty.com>

--- a/packages/twenty-front/package.json
+++ b/packages/twenty-front/package.json
@@ -9,14 +9,16 @@
     "start:clean": "yarn start --force",
     "build": "tsc && vite build && yarn build:inject-runtime-env",
     "build:inject-runtime-env": "sh ./scripts/inject-runtime-env.sh",
+    "tsc:spec": "tsc --project tsconfig.spec.json --noEmit",
     "tsc": "tsc --project tsconfig.app.json --watch",
-    "tsc:ci": "tsc --project tsconfig.app.json",
+    "tsc:ci": "tsc --project tsconfig.app.json --noEmit && tsc --project tsconfig.spec.json --noEmit && tsc --project tsconfig.node.json --noEmit",
     "preview": "vite preview",
     "lint": "eslint . --report-unused-disable-directives --max-warnings 0 --config .eslintrc.cjs",
     "lint:ci": "yarn lint --config .eslintrc-ci.cjs",
     "fmt:fix": "prettier --cache --write \"src/**/*.ts\" \"src/**/*.tsx\"",
     "fmt": "prettier --check \"src/**/*.ts\" \"src/**/*.tsx\"",
     "test": "jest",
+    "test-watch": "jest --coverage=false --watch",
     "tsup": "tsup",
     "coverage": "jest --coverage",
     "storybook:modules:dev": "STORYBOOK_SCOPE=modules yarn storybook:dev",
@@ -29,6 +31,7 @@
     "storybook:docs:build": "STORYBOOK_SCOPE=ui-docs yarn storybook:build",
     "storybook:test": "test-storybook",
     "storybook:test-slow": "test-storybook --maxWorkers=3",
+    "storybook:test-single-worker": "test-storybook --maxWorkers=1",
     "storybook:coverage": "yarn storybook:test-slow --coverage && npx nyc report --reporter=lcov -t coverage/storybook --report-dir coverage/storybook --check-coverage",
     "storybook:modules:coverage": "STORYBOOK_SCOPE=modules yarn storybook:coverage",
     "storybook:pages:coverage": "STORYBOOK_SCOPE=pages yarn storybook:coverage",
