--- a/package.json
+++ b/package.json
@@ -241,6 +241,7 @@
     "msw": "^2.0.11",
     "msw-storybook-addon": "2.0.0--canary.122.b3ed3b1.0",
     "nx": "^17.2.8",
+    "playwright": "^1.40.1",
     "prettier": "^3.1.1",
     "raw-loader": "^4.0.2",
     "rimraf": "^5.0.5",
