--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@octokit/graphql": "^7.0.2",
     "@ptc-org/nestjs-query-core": "^4.2.0",
     "@ptc-org/nestjs-query-typeorm": "4.2.1-alpha.2",
+    "@react-email/components": "0.0.12",
+    "@react-email/render": "0.0.10",
     "@sentry/node": "^7.66.0",
     "@sentry/profiling-node": "^1.2.6",
     "@sentry/react": "^7.88.0",
