Fix docker-compose commands (#3403)

--- a/packages/twenty-docker/Makefile
+++ b/packages/twenty-docker/Makefile
@@ -1,16 +1,12 @@
 dev-build:
-	@docker compose -f dev/docker-compose.yml down
-	@docker volume rm twenty_dev_node_modules_root > /dev/null 2>&1 || true
-	@docker volume rm twenty_dev_node_modules_docs > /dev/null 2>&1 || true
-	@docker volume rm twenty_dev_node_modules_eslint > /dev/null 2>&1 || true
-	@docker volume rm twenty_dev_node_modules_front > /dev/null 2>&1 || true
-	@docker volume rm twenty_dev_node_modules_server > /dev/null 2>&1 || true
-	@docker volume rm twenty_dev_node_modules_website > /dev/null 2>&1 || true
-	@docker volume rm twenty_dev_node_modules_zapier > /dev/null 2>&1 || true
+	@docker compose -f dev/docker-compose.yml down -v
 	@docker compose -f dev/docker-compose.yml build
 
-dev-up:
-	@docker compose -f dev/docker-compose.yml up -d
+dev-start:
+	@docker compose -f dev/docker-compose.yml start
+
+dev-stop:
+	@docker compose -f dev/docker-compose.yml stop
 
 dev-down:
 	@docker compose -f dev/docker-compose.yml down -v
